--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "3qr-code-component",
+  "name": "whatsapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,9 +15,10 @@
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
-    "react-router-dom": "^6.8.2",
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
