--- a/server/package.json
+++ b/server/package.json
@@ -16,13 +16,18 @@
   "dependencies": {
     "ably": "^1.2.39",
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
     "csv-express": "^1.2.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "file-saver": "^2.0.5",
+    "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.3.1",
+    "randomstring": "^1.2.3",
     "whatsapp-web.js": "^1.19.5"
   }
 }
