--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "file-saver": "^2.0.5",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.3.1",
+    "nodemailer": "^6.9.2",
     "randomstring": "^1.2.3",
     "whatsapp-web.js": "^1.19.5"
   }
