--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.4.0",
     "daisyui": "^2.51.3",
     "file-saver": "^2.0.5",
+    "lodash": "^4.17.21",
     "papaparse": "^5.4.1",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
