--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@axe-core/react": "^4.6.0",
+    "@react-google-maps/api": "^2.18.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ably": "^1.2.39",
     "axios": "^1.4.0",
+    "chart.js": "^2.9.4",
     "daisyui": "^2.51.3",
     "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
@@ -16,7 +18,7 @@
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.1",
