--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "14.x"
+    "node": "18.x"
   },
   "scripts": {
     "start": "node index.js",
@@ -30,6 +30,6 @@
     "nodemailer": "^6.9.2",
     "qrcode": "^1.5.3",
     "randomstring": "^1.2.3",
-    "whatsapp-web.js": "^1.21.0"
+    "whatsapp-web.js": "^1.21.1-alpha.1"
   }
 }
